tests/fail/semantic/paramFunct.tiger
let

	type t = array of int
	function test(a:int,b:t) : int=
		b[5]+a


in

	print(test(5,42))
	

end
